[package]
name = "reform_rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
chrono-tz = "0.10.0"
parking_lot = "0.12.3"
polars = { version = "0.44.2", features = ["lazy", "dtype-date", "dtype-datetime", "dtype-duration", "strings", "temporal", "abs", "regex", "dtype-decimal", "parquet"] }
rayon = "1.10.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_derive = "1.0.215"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
